--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 ---
 layout: single
 author_profile: true
+header:
+	image: /images/header_img_1.jpg
 ---
 
 Doctoral Researcher, Department of Civil and Environmental Engineering (CEE), PolyU, Hong Kong.
+
 
 Currently, I am working on the Traffic Assignment problem. To be more specific, I am mastering MP formulation of Stochastic User Equilibrium (SUE). These days I am practicing with the Multinomial Logit based SUE (MNL), Cross-Nested Logit (CNL) based SUE, and Pair-Combinatorial Logit (PCL) based SUE formulations and their extentions.
