--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: single
 author_profile: true
 header:
-	image: /images/header_img_1.jpg
+	image: "/images/header_img_1.jpg"
 ---
 
 Doctoral Researcher, Department of Civil and Environmental Engineering (CEE), PolyU, Hong Kong.
